unpackaged/main/default/objects/ia_crm__Renewal_Template__c/ia_crm__Renewal_Template__c.object-meta.xml
<CustomObject>
    <label>Renewal Template</label>
    <nameField>
        <label>Renewal Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewal Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>