unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__Create_Opportunity_from_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Create_Opportunity_from_Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Opportunity from Salesforce</label>
    <type>Checkbox</type>
</CustomField>