unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__Create_renewal_as__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Create_renewal_as__c</fullName>
    <label>Create renewal as</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>