unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__Create_sales_transaction__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Create_sales_transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the system will create a new sales transaction in Intacct as part of the renewal.</description>
    <inlineHelpText>Indicates whether the system will create a new sales transaction in Intacct as part of the renewal.</inlineHelpText>
    <label>Create sales transaction</label>
    <type>Checkbox</type>
</CustomField>