unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__Date_on_renewed_document__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Date_on_renewed_document__c</fullName>
    <description>This field shows how the system determines the Transaction date on the sales transaction created by the renewal.</description>
    <inlineHelpText>This field shows how the system determines the Transaction date on the sales transaction created by the renewal.</inlineHelpText>
    <label>Date on renewed document</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Calculated date</fullName>
            </value>
            <value>
                <fullName>Contract end date + 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>