unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__Default_renewal_term_length__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Default_renewal_term_length__c</fullName>
    <label>Default renewal term length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>