unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__Default_renewal_term_period__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Default_renewal_term_period__c</fullName>
    <label>Default renewal term period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>