unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__Inherit_products_from_parent_sales_oppor__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Inherit_products_from_parent_sales_oppor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the system should populate the new opportunity with the same products (items) that existed in the original opportunity.</description>
    <inlineHelpText>Indicates whether the system should populate the new opportunity with the same products (items) that existed in the original opportunity.</inlineHelpText>
    <label>Inherit products from parent sales oppor</label>
    <type>Checkbox</type>
</CustomField>