unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__Intacct_Entity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intacct Entity</label>
    <referenceTo>ia_crm__Intacct_Entity__c</referenceTo>
    <relationshipLabel>Renewal Templates</relationshipLabel>
    <relationshipName>Renewal_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>