unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__Internal_Email_Alert__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Internal_Email_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Email Alert</label>
    <type>Checkbox</type>
</CustomField>