unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__Naming_convention__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Naming_convention__c</fullName>
    <label>Naming convention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>