unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__Number_of_days__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Number_of_days__c</fullName>
    <label>Number of days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>