unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__Renewal_template_id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renewal_template_id__c</fullName>
    <label>Renewal template id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>