unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__Sales_transaction_type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Sales_transaction_type__c</fullName>
    <description>Use this field to see the type of sales transaction the system will create upon renewal.</description>
    <inlineHelpText>Use this field to see the type of sales transaction the system will create upon renewal.</inlineHelpText>
    <label>Sales transaction type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Invoice</fullName>
            </value>
            <value>
                <fullName>Sales Order</fullName>
            </value>
            <value>
                <fullName>Sales Quote</fullName>
            </value>
            <value>
                <fullName>Sales Return</fullName>
            </value>
            <value>
                <fullName>Shipper</fullName>
            </value>
            <value>
                <fullName>Sales Credit Memo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>