unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__Send_email_to_customer__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Send_email_to_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send email to customer</label>
    <type>Checkbox</type>
</CustomField>