unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__Stage_of_opportunity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Stage_of_opportunity__c</fullName>
    <label>Stage of opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>