unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__Start_date_of_renewed_contract__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Start_date_of_renewed_contract__c</fullName>
    <description>This field shows how the system determines the line item Start date on the sales transaction created by the renewal.</description>
    <inlineHelpText>This field shows how the system determines the line item Start date on the sales transaction created by the renewal.</inlineHelpText>
    <label>Start date of renewed contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Same as Document Date</fullName>
            </value>
            <value>
                <fullName>With Inherited Offset from Parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>