unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__Transaction_type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Transaction_type__c</fullName>
    <label>Transaction type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales transaction</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>