unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__When_create_sales_transaction__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__When_create_sales_transaction__c</fullName>
    <description>The number of Days before or after the source contract end date that the system should create the sales transaction.</description>
    <inlineHelpText>The number of Days before or after the source contract end date that the system should create the sales transaction.</inlineHelpText>
    <label>When create sales transaction(Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>