unpackaged/main/default/objects/ia_crm__Renewal_Template__c/fields/ia_crm__When_Internal_Alert__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__When_Internal_Alert__c</fullName>
    <label>When Internal Alert</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Before</fullName>
            </value>
            <value>
                <fullName>After</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>