unpackaged/main/default/objects/ia_crm__Renewal_Template__c/listViews/ia_crm__All.listView-meta.xml
<ListView>
    <fullName>ia_crm__All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>ia_crm__Transaction_type__c</columns>
    <columns>ia_crm__Create_Opportunity_from_Salesforce__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>